--- a/index.html
+++ b/index.html
@@ -5,70 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Picos Imóveis</title>
-    <!-- Favicon para evitar 404 -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏠</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            scroll-behavior: smooth;
-        }
-        /* Estilo para evitar flash de tela branca */
+        body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; overflow-x: hidden; background: #f8fafc; }
         #root:empty {
             display: flex;
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: #f8fafc;
+            width: 100vw;
+            flex-direction: column;
+            gap: 20px;
+        }
+        #root:empty::before {
+            content: "";
+            width: 40px;
+            height: 40px;
+            border: 4px solid #e2e8f0;
+            border-top: 4px solid #1d4ed8;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
         }
         #root:empty::after {
-            content: "Carregando Picos Imóveis...";
-            font-weight: 800;
+            content: "INICIALIZANDO SISTEMA...";
+            font-weight: 900;
             color: #1d4ed8;
-            letter-spacing: 0.1em;
-            text-transform: uppercase;
-            font-size: 12px;
-            animation: pulse 1.5s infinite;
+            letter-spacing: 0.2em;
+            font-size: 11px;
         }
-        @keyframes pulse { 0% { opacity: 0.4; } 50% { opacity: 1; } 100% { opacity: 0.4; } }
-        
-        /* Animação de Scroll Infinito */
-        @keyframes scroll {
-            0% { transform: translateX(0); }
-            100% { transform: translateX(calc(-250px * 5)); }
-        }
-
-        .animate-scroll {
-            animation: scroll 30s linear infinite;
-            display: flex;
-            width: max-content;
-        }
-
-        .animate-scroll:hover {
-            animation-play-state: paused;
-        }
-
-        /* Esconder scrollbar mas manter funcionalidade */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
-        }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+        html { scroll-behavior: smooth; }
+        .no-scrollbar::-webkit-scrollbar { display: none; }
+        .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+        @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(calc(-280px * 5)); } }
+        .animate-scroll { display: flex; width: max-content; animation: scroll 30s linear infinite; }
+        .animate-scroll:hover { animation-play-state: paused; }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
